--- a/Articles/VECM/tabs/VECM_ajuste.tex
+++ b/Articles/VECM/tabs/VECM_ajuste.tex
@@ -3,36 +3,36 @@
 \toprule
                               & \textbf{coef} & \textbf{std err} & \textbf{z} & \textbf{P$> |$z$|$} & \textbf{[0.025} & \textbf{0.975]}  \\
 \midrule
-\textbf{lin\_trend}           &   -1.633e-05  &     4.39e-05     &    -0.372  &         0.710        &       -0.000    &     6.97e-05     \\
-\textbf{L1.Own Interest rate} &       0.0371  &        0.111     &     0.334  &         0.739        &       -0.181    &        0.255     \\
-\textbf{L1.gIh}               &       0.0730  &        0.083     &     0.878  &         0.380        &       -0.090    &        0.236     \\
-\textbf{L2.Own Interest rate} &      -0.0035  &        0.110     &    -0.031  &         0.975        &       -0.218    &        0.212     \\
-\textbf{L2.gIh}               &       0.1112  &        0.082     &     1.362  &         0.173        &       -0.049    &        0.271     \\
-\textbf{L3.Own Interest rate} &       0.0753  &        0.118     &     0.638  &         0.524        &       -0.156    &        0.307     \\
-\textbf{L3.gIh}               &       0.1080  &        0.069     &     1.563  &         0.118        &       -0.027    &        0.243     \\
-\textbf{L4.Own Interest rate} &       0.2657  &        0.119     &     2.237  &         0.025        &        0.033    &        0.498     \\
+\textbf{lin\_trend}           &   -1.032e-05  &     4.15e-05     &    -0.248  &         0.804        &    -9.17e-05    &     7.11e-05     \\
+\textbf{L1.Own Interest rate} &       0.0334  &        0.111     &     0.301  &         0.763        &       -0.184    &        0.251     \\
+\textbf{L1.gIh}               &       0.0664  &        0.082     &     0.808  &         0.419        &       -0.095    &        0.227     \\
+\textbf{L2.Own Interest rate} &      -0.0074  &        0.109     &    -0.067  &         0.946        &       -0.222    &        0.207     \\
+\textbf{L2.gIh}               &       0.1075  &        0.081     &     1.328  &         0.184        &       -0.051    &        0.266     \\
+\textbf{L3.Own Interest rate} &       0.0807  &        0.118     &     0.683  &         0.495        &       -0.151    &        0.312     \\
+\textbf{L3.gIh}               &       0.1073  &        0.069     &     1.561  &         0.119        &       -0.027    &        0.242     \\
+\textbf{L4.Own Interest rate} &       0.2700  &        0.119     &     2.265  &         0.023        &        0.036    &        0.504     \\
                               & \textbf{coef} & \textbf{std err} & \textbf{z} & \textbf{P$> |$z$|$} & \textbf{[0.025} & \textbf{0.975]}  \\
 \midrule
-\textbf{lin\_trend}           &      -0.0003  &     6.95e-05     &    -3.850  &         0.000        &       -0.000    &       -0.000     \\
-\textbf{L1.Own Interest rate} &      -0.1754  &        0.176     &    -0.996  &         0.319        &       -0.521    &        0.170     \\
-\textbf{L1.gIh}               &      -0.4204  &        0.132     &    -3.195  &         0.001        &       -0.678    &       -0.163     \\
-\textbf{L2.Own Interest rate} &      -1.0003  &        0.174     &    -5.762  &         0.000        &       -1.341    &       -0.660     \\
-\textbf{L2.gIh}               &      -0.4595  &        0.129     &    -3.557  &         0.000        &       -0.713    &       -0.206     \\
-\textbf{L3.Own Interest rate} &      -0.5871  &        0.187     &    -3.144  &         0.002        &       -0.953    &       -0.221     \\
-\textbf{L3.gIh}               &      -0.1994  &        0.109     &    -1.824  &         0.068        &       -0.414    &        0.015     \\
-\textbf{L4.Own Interest rate} &      -0.5342  &        0.188     &    -2.843  &         0.004        &       -0.903    &       -0.166     \\
-\textbf{L4.gIh}               &      -0.2446  &        0.085     &    -2.890  &         0.004        &       -0.410    &       -0.079     \\
+\textbf{lin\_trend}           &      -0.0003  &     6.53e-05     &    -3.899  &         0.000        &       -0.000    &       -0.000     \\
+\textbf{L1.Own Interest rate} &      -0.1844  &        0.174     &    -1.058  &         0.290        &       -0.526    &        0.157     \\
+\textbf{L1.gIh}               &      -0.4239  &        0.129     &    -3.280  &         0.001        &       -0.677    &       -0.171     \\
+\textbf{L2.Own Interest rate} &      -1.0133  &        0.172     &    -5.891  &         0.000        &       -1.350    &       -0.676     \\
+\textbf{L2.gIh}               &      -0.4643  &        0.127     &    -3.644  &         0.000        &       -0.714    &       -0.215     \\
+\textbf{L3.Own Interest rate} &      -0.6058  &        0.186     &    -3.259  &         0.001        &       -0.970    &       -0.241     \\
+\textbf{L3.gIh}               &      -0.2084  &        0.108     &    -1.927  &         0.054        &       -0.420    &        0.004     \\
+\textbf{L4.Own Interest rate} &      -0.5458  &        0.187     &    -2.913  &         0.004        &       -0.913    &       -0.179     \\
+\textbf{L4.gIh}               &      -0.2525  &        0.084     &    -3.008  &         0.003        &       -0.417    &       -0.088     \\
              & \textbf{coef} & \textbf{std err} & \textbf{z} & \textbf{P$> |$z$|$} & \textbf{[0.025} & \textbf{0.975]}  \\
 \midrule
-\textbf{ec1} &      -0.0232  &        0.071     &    -0.328  &         0.743        &       -0.162    &        0.116     \\
+\textbf{ec1} &      -0.0126  &        0.068     &    -0.186  &         0.853        &       -0.146    &        0.121     \\
              & \textbf{coef} & \textbf{std err} & \textbf{z} & \textbf{P$> |$z$|$} & \textbf{[0.025} & \textbf{0.975]}  \\
 \midrule
-\textbf{ec1} &      -0.4242  &        0.112     &    -3.787  &         0.000        &       -0.644    &       -0.205     \\
+\textbf{ec1} &      -0.4126  &        0.107     &    -3.858  &         0.000        &       -0.622    &       -0.203     \\
                 & \textbf{coef} & \textbf{std err} & \textbf{z} & \textbf{P$> |$z$|$} & \textbf{[0.025} & \textbf{0.975]}  \\
 \midrule
 \textbf{beta.1} &       1.0000  &            0     &         0  &         0.000        &        1.000    &        1.000     \\
-\textbf{beta.2} &       1.2843  &        0.149     &     8.595  &         0.000        &        0.991    &        1.577     \\
-\textbf{const}  &      -0.1131  &        0.009     &   -12.513  &         0.000        &       -0.131    &       -0.095     \\
+\textbf{beta.2} &       1.3143  &        0.156     &     8.445  &         0.000        &        1.009    &        1.619     \\
+\textbf{const}  &      -0.1127  &        0.009     &   -11.982  &         0.000        &       -0.131    &       -0.094     \\
 \bottomrule
 \end{tabular}
 %\caption{Det. terms outside the coint. relation & lagged endog. parameters for equation Own Interest rate}
