--- a/Materias/2S2020/PED_CE342/Reunioes.org
+++ b/Materias/2S2020/PED_CE342/Reunioes.org
@@ -65,3 +65,45 @@
     DEADLINE: <2020-09-16 qua>
 *** TODO Preparar aula sobre como fazer uma resenha
     DEADLINE: <2020-09-16 qua>
+
+* <2020-11-27 sex> - Reunião pós avaliação do curso
+
+- Muitas reclamações em relação às avaliações
+- Início do semestre já com força total
+  + Transposição do curso presencial para o formato remoto
+- Foi apontada uma transigência do método de avaliação
+- Muito incômoco com a questão 
+
+** Proposta dos alunos
+*** Primeira
+**** Aumentar peso das resenhas e dos seminários
+**** Eliminar prova
+**** Redistribuir tempo entre os seminários
+**** Possibilidade da entrega das resenhas atrasadas
+*** Nova forma de prova
+**** Tirar regra do cinco
+**** Mudar os pesos
+**** Mudar data de entrega das resenhas
+*** Terceira
+**** Igual sem a nova forma de prova
+
+** Propostas Ana Rosa
+
+- Aumentar peso dos seminários (30%)
+- 40% para prova
+
+** Prova
+
+- Sugestão de questão: o que foi aprendido com a resenha
+
+** TODO Levantamento se descartar as duas notas mais baixas faz diferença
+
+** TODO Data limite escolha da prova <2020-12-10 qui> 
+** Sugestão de séries para as aulas
+
+- PIB
+- Emprego
+- Taxa de juros (over selic)
+- IPCA e IGP
+- Composição IPCA (Atenção 2015)
+- Taxa de câmbio
